manifests/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spin
  name: spin-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spin
      cluster: spin-redis
  template:
    metadata:
      labels:
        app: spin
        cluster: spin-redis
    spec:
      containers:
      - env:
        - name: MASTER
          value: "true"
        image: redis:latest
        imagePullPolicy: IfNotPresent
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 6379
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spin
    cluster: spin-redis
  name: spin-redis
  namespace: spinnaker
spec:
  ports:
  - name: http
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: spin
    cluster: spin-redis
  sessionAffinity: None
  type: ClusterIP
